# indexd

./: .codeclimate.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  dev-requirements.in  dev-requirements.txt  docker-build-jenkins.sh  docker-compose-ci.yaml  docker.sh  dockerrun.bash  indexd.conf  install_swagger_client.sh  openapi-index.html  pyproject.toml  pytest.ini  requirements.txt  service-install.local.sh  service-install.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini  wsgi.py
db/: create.sql
helm/files/: local_settings.py
helm/templates/: configmap.yaml
indexd/: app.py  blueprint.py  client.py  default_settings.py  driver_base.py  utils.py
indexd/alias/drivers/: alchemy.py
indexd/auth/drivers/: alchemy.py
indexd/bulk/: blueprint.py
indexd/doi/: blueprint.py  dosclient.py
indexd/dos/: blueprint.py
indexd/index/: blueprint.py  driver.py  version_data.py
indexd/index/drivers/: alchemy.py
indexd/index/drivers/query/: urls.py
indexd/urls/: blueprint.py
indexd_test_utils/: __init__.py
openapis/: swagger.yaml
src/indexd/: blueprint.py  default_settings.py  utils.py  version.py
src/indexd/alias/drivers/: alchemy.py
src/indexd/auth/drivers/: alchemy.py
src/indexd/bulk/: blueprint.py
src/indexd/cli/: index_admin.py  indexd  migrate_index.py
src/indexd/index/: blueprint.py
src/indexd/index/drivers/: alchemy.py
src/indexd/index/drivers/query/: urls.py
src/indexd/scripts/: index_admin.py  indexd  migrate_index.py
tests/: alchemy.py  conftest.py  test_client.py  test_doiclient.py  test_dosclient.py  test_driver_alchemy_crud.py  test_openapi.py  test_schema_migration.py  test_test_utils.py  test_urls_endpoints.py
tests/integration/: conftest.py  test_client.py  test_driver_alchemy_auth.py  test_driver_alchemy_crud.py  test_index_endpoints.py  test_schema_migration.py  test_urls_endpoints.py
