[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm>=7", "versionista"]
build-backend = "setuptools.build_meta"

[project]
name = "indexd"
dynamic = [
  "version",
  "description",
  "readme",
  "requires-python",
  "license",
  "authors",
  "maintainers",
  "keywords",
  "classifiers",
  "urls",
  "scripts",
  "gui-scripts",
  "entry-points",
  "dependencies",
  "optional-dependencies"
]

[tool.black]
line-length = 98
include = '\.pyi?$'

[tool.coverage.html]
title = "indexd coverage report"
directory = "docs/htmlcov"
show_contexts = true

[tool.isort]
profile = "black"
extend_skip = [".md", ".json"]
known_first_party = ["indexd"]
known_third_party = ["swagger_client"]
py_version = 37
skip = [".gitignore", ".dockerignore"]

[tool.pytest.ini_options]
minversion = 6.0
python_files = "test_*.py"
python_functions = "test_*"
# Silence warning by opting in to use pytest 6's new default value
junit_family = "xunit2"
junit_logging = "system-out"
console_output_style = "classic"
log_cli_level = "INFO"
log_level = "INFO"
log_cli = "true"
log_auto_indent = "true"
filterwarnings = ["ignore::DeprecationWarning"]
addopts = [
  "-r alv --color=true -p no:ddtrace -p no:ddtrace.pytest_bdd"
]
norecursedirs = [
  ".git",
  ".tox",
  "dist",
  "build"
]
testpaths = [
  "tests/unit",
  "tests/integration"
]

[tool.setuptools_scm]
local_scheme = "versionista-local-format"
version_scheme = "versionista-format"
