[metadata]
name = indexd
description = Data indexing and tracking service.
long_description = file: README.md
long_description_content_type = text/markdown
author = GDC Feature Team
author_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
maintainer = GDC Feature Team
maintainer_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
license = Apache Software License 2.0
license_files = LICENSE
url = https://github.com/NCI-GDC/indexd
keywords = indexd
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

[options]
zip_safe = True
packages = find:
package_dir =
    =src
python_requires = >=3.7
include_package_data = True
install_requires =
    flask~=2.2
    jsonschema>3
    sqlalchemy<1.4
    sqlalchemy-utils>=0.32
    psycopg2>=2.7
    cdislogging>=1.0
    requests
    ddtrace
    importlib-metadata; python_version < '3.8'
    versionista
    tomlkit

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage[toml]
    pyhamcrest
    pytest>=6.0
    pytest-cov
    pytest-flask
    openapi-spec-validator
    jsonschema-spec
docs =
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-napoleon
[options.entry_points]
console_scripts =
    index_admin.py = indexd.cli.index_admin:__main__
    indexd = indexd.cli.indexd:__main__
    migrate_index.py = indexd.cli.migrate_index:__main__
